HEAD
	+ Bugfix: Better error handling in notify job results
	+ Bugfix: Using ebox as common base for Via protocol
1.3.7
	+ Bugfix: Add CACertificatePath to trust in CC job dispatchers
1.3.6
	+ Run cronjob sent by eBox CC
1.1.20
	+ New release
1.1
	+ Initial release