@@ -1,4 +1,6 @@
 HEAD
+	+ Bugfix: Use name in VPN client configuration for reaching the
+  	  VPN server to avoid problems if we change the IP addresses
 	+ Bugfix: Better error handling in notify job results
 	+ Bugfix: Using ebox as common base for Via protocol
 1.3.7
